introduction almost complete and html absent plots correction

--- a/_overleaf-draft.qmd
+++ b/_overleaf-draft.qmd
@@ -3,55 +3,41 @@
 
 Assessing unconscious visual images in aphantasia: objective measurement using a novel priming paradigm
 
-  > Voici une proposition avec une structure "goal catch -> détail technique" (tout en restant exact), j'ai essayé de mettre en avant les apports clés de l'étude. J'ai pensé à ajouter "proposal for an" avant "objective measurement", ce qui serait plus exact car notre mesure n'est pas encore tout à fait au point, mais c'est moins sexy
+ > Voici une proposition avec une structure "goal catch -> détail technique" (tout en restant exact), j'ai essayé de mettre en avant les apports clés de l'étude. J'ai pensé à ajouter "proposal for an" avant "objective measurement", ce qui serait plus exact car notre mesure n'est pas encore tout à fait au point, mais c'est moins sexy
+
+ > Overleaf comment: Cette nouvelle version ne commence plus par un paragraphe type "summary"/plan qui dirait en substance "Voici l'imagerie visuelle, voici l'aphantasie, voilà ce qu'on veut faire". Je me suis convaincu d'abandonner ça en lisant des articles récents (par ex. Liu 2023, Monzel 2023, Gulyas 2022): en soi l'abstract fait ce travail de plan, puis les intros commencent directement sur les définitions et le contexte, les études et les problématiques ouvertes, leurs propres questions et objectifs, fin.
 
 # Introduction
-
 
     1. Try to imagine: this is mental imagery. Here is how mental imagery is usually defined. It has been studied for quite a while that mental sensory representations are involved in a lot of cognitive processes: here's a list of them with references.
 
     2. Some have it, some not. This has recently been called aphantasia. It would seem that 3 to 4% of people could have it. There has been quite a few papers on it, correlates, etc. Although self-reports by aphantasics are very consistent across studies, many authors highlight the need to cross the subjective reports with more objective tasks assessing visual imagery. Yet a crucial question on this aspect is still debated: is aphantasia a true absence of mental images, or do people have them but are simply unable to access them consciously? 
 
- > Overleaf comment: Cette nouvelle version ne commence plus par un paragraphe type "summary"/plan qui dirait en substance "Voici l'imagerie visuelle, voici l'aphantasie, voilà ce qu'on veut faire". Je me suis convaincu d'abandonner ça en lisant des articles récents (par ex. Liu 2023, Monzel 2023, Gulyas 2022): en soi l'abstract fait ce travail de plan, puis les intros commencent directement sur les définitions et le contexte, les études et les problématiques ouvertes, leurs propres questions et objectifs, fin.
- 
- <!-- Most human beings can form clear images in the "\textit{mind's eye}", such as when recalling a past episode: this phenomenon is referred to as "visual imagery". -->
+Close your eyes and try to mentally visualize your breakfast-table as you sat down to it this morning. Most people would report having a clear image of the scene in their "\textit{mind's eye}": this experience is referred to as visual imagery, commonly defined as the experience of visual sensory information without a direct external stimulus \citep{pearson_human_2019}. Nonetheless, there are great differences between individuals with regard to the vividness of these images, some people even declaring that they have no visual mental images at all. This extreme phenomenon, although already observed in the $19^{th}$ century \citep{galtonSTATISTICSMENTALIMAGERY1880} and noted in various studies since then \citep[e.g.,][among many others]{farahCaseStudyMental1988, fawConflictingIntuitionsMay2009, marksVisualImageryDifferences1973, mckelvieVVIQPsychometricTest1995, paivioImageryAbilityVisual1971, sheehanUnderstandingVariabilityImagery1987, slatterAlphaRhythmsMental1960}, received renewed attention only nine years ago, when \cite{zemanLivesImageryCongenital2015}, in a study that has since become very popular, coined the term "\textit{aphantasia}" to refer to the inability to generate mental images.
 
-  <!-- Visual imagery is commonly defined as the experience of visual sensory information without a direct external stimulus \citep{pearson_human_2019}. Numerous studies have shown the functional role of visual imagery in cognition. To name but a few, it is known to be solicited in autobiographical memory and future thinking \citep[e.g.][]{purkartAmeliorerRememorationEvenements2019, schacterCognitiveNeuroscienceConstructive2007, schacterRememberingImagineFuture2007}, working memory \citep[e.g.][]{reyWhenReactivatedVisual2018, serencesStimulusSpecificDelayActivity2009}, language comprehension \citep[e.g.][]{dilsVisualMotionAftereffect2010}, moral reasoning \citep[e.g.][]{amitYouSeeEnds2012}, dreams \citep[e.g.][]{horikawaNeuralDecodingVisual2013} or expectations about upcoming tasks \citep[e.g.][]{kokPriorExpectationsEvoke2014}. -->
-
-<!-- Nonetheless, there are great differences between individuals with regard to the vividness of these images, some people even declaring that they have no visual mental images at all. This extreme phenomenon, although already observed in the $19^{th}$ century \citep{galtonSTATISTICSMENTALIMAGERY1880} and noted in various studies since then \citep[e.g.,][among many others]{farahCaseStudyMental1988, fawConflictingIntuitionsMay2009, marksVisualImageryDifferences1973, mckelvieVVIQPsychometricTest1995, paivioImageryAbilityVisual1971, sheehanUnderstandingVariabilityImagery1987, slatterAlphaRhythmsMental1960}, received renewed attention only nine years ago, when \cite{zemanLivesImageryCongenital2015}, in a study that has since become very popular, coined the term "\textit{aphantasia}" to refer to the inability to generate mental images.  -->
-
-    1. and 2.
-    
-*Close your eyes and try to mentally visualize your breakfast-table as you sat down to it this morning. Most people would report having a clear image of the scene in their "\textit{mind's eye}": this experience is referred to as visual imagery, commonly defined as the experience of visual sensory information without a direct external stimulus \citep{pearson_human_2019}. Nonetheless, there are great differences between individuals with regard to the vividness of these images, some people even declaring that they have no visual mental images at all. This extreme phenomenon, although already observed in the $19^{th}$ century \citep{galtonSTATISTICSMENTALIMAGERY1880} and noted in various studies since then \citep[e.g.,][among many others]{farahCaseStudyMental1988, fawConflictingIntuitionsMay2009, marksVisualImageryDifferences1973, mckelvieVVIQPsychometricTest1995, paivioImageryAbilityVisual1971, sheehanUnderstandingVariabilityImagery1987, slatterAlphaRhythmsMental1960}, received renewed attention only nine years ago, when \cite{zemanLivesImageryCongenital2015}, in a study that has since become very popular, coined the term "\textit{aphantasia}" to refer to the inability to generate mental images.*
-
-*Early estimates suggest that aphantasia could concern 3-4\% of the global population \citep[see for instance][]{dancePrevalenceAphantasiaImagery2022, palermo, dawes}. However, many aphantasics may be unaware of their condition, suggesting a potential underestimation of the phenomenon \citep{fawConflictingIntuitionsMay2009, zemanPhantasiaPsychologicalSignificance2020}. Aphantasics differ from the control population on a number of self-report questionnaires of mental imagery and memory \citep{dawesCognitiveProfileMultisensory2020}, such as the Vividness of Visual Imagery Questionnaire \citep[VVIQ;][]{marksVividnessVisualImagery1973}, the Questionnaire upon Mental Imagery (QMI; Sheehan, 1967) \citep[QMI;][]{sheehanShortenedFormBetts1967a}, the Object and Spatial Imagery Questionnaire \citep[OSIQ, but only on the object score;][]{blazhenkovaObjectspatialImageryNew2006}, the Episodic Memory Imagery Questionnaire \citep[EMIQ;][]{dawesCognitiveProfileMultisensory2020} or the Survey of Autobiographical Memory \citep[SAM;][]{palomboSurveyAutobiographicalMemory2013}. Although self-reports by aphantasics are very consistent across studies (reduced autobiographical memory, fewer dreams, intact spatial imagery), many authors stress the need to cross subjective reports with more objective tasks assessing visual imagery. This need is highlighted by the heterogeneity and complexity of aphantasia: for example, some aphantasics report visual mental imagery when dreaming, some have preserved mental imagery in other sensory modalities, while others report a complete absence of conscious mental imagery, both voluntary and involuntary \citep{dawesCognitiveProfileMultisensory2020, zemanPhantasiaPsychologicalSignificance2020}. Yet a crucial question for this assessment is still being debated: is aphantasia a genuine absence of mental images, or do people have them but are simply unable to access them consciously?*
+Early estimates suggest that aphantasia could concern 3-4\% of the global population \citep[see for instance][]{dancePrevalenceAphantasiaImagery2022, palermo, dawes}. However, many aphantasics may be unaware of their condition, suggesting a potential underestimation of the phenomenon \citep{fawConflictingIntuitionsMay2009, zemanPhantasiaPsychologicalSignificance2020}. Aphantasics differ from the control population on a number of self-report questionnaires of mental imagery and memory \citep{dawesCognitiveProfileMultisensory2020}, such as the Vividness of Visual Imagery Questionnaire \citep[VVIQ;][]{marksVividnessVisualImagery1973}, the Questionnaire upon Mental Imagery (QMI; Sheehan, 1967) \citep[QMI;][]{sheehanShortenedFormBetts1967a}, the Object and Spatial Imagery Questionnaire \citep[OSIQ, but only on the object score;][]{blazhenkovaObjectspatialImageryNew2006}, the Episodic Memory Imagery Questionnaire \citep[EMIQ;][]{dawesCognitiveProfileMultisensory2020} or the Survey of Autobiographical Memory \citep[SAM;][]{palomboSurveyAutobiographicalMemory2013}. Although self-reports by aphantasics are very consistent across studies (reduced autobiographical memory, fewer dreams, intact spatial imagery), many authors stress the need to cross subjective reports with more objective tasks assessing visual imagery. This need is highlighted by the heterogeneity and complexity of aphantasia: for example, some aphantasics report visual mental imagery when dreaming, some have preserved mental imagery in other sensory modalities, while others report a complete absence of conscious mental imagery, both voluntary and involuntary \citep{dawesCognitiveProfileMultisensory2020, zemanPhantasiaPsychologicalSignificance2020}. Yet a crucial question for this assessment is still being debated: is aphantasia a genuine absence of mental images, or do people have them but are simply unable to access them consciously?
 
     3. Some doubt that mental images could be utterly absent and have suggested that aphantasics might still have unconscious mental images. A very recent study (Liu & Barto 2023) used a behavioural task to assess visual imagery in various domains using imageable words (the French Perception-Imagination Battery) in aphantasics and controls. They found no difference in accuracy, but slower RTs and confidence in the responses, and argued that this result was coherent with the fact that aphantasics had the visual images required to complete the task yet without being conscious of them. Likewise, in a task supposed to use visual imagery to compare the location of a point with an imagined shape, Jacobs 2018 found no difference in accuracy between an aphantasic and control participant, a result that could be interpreted as accrediting the presence of unconscious visual imagery. However, like many studies on aphantasia, due to the conscious nature of the processes at play in these behavioural tasks (with or without sensory imagery), neither study could completely rule out the possibility of alternative strategies (propositional, spatial, etc.) used by aphantasics to solve the tasks.
 
-But very little is known about unconscious and involuntary mental imagery in aphantasia. It was hypothesized that the behavior of aphantasics that report having no imagery at all could be balanced by an unscathed unconscious mental imagery \citep{nanay_unconscious_2020}.
-*Alt:* Interestingly, it has been proposed that mental imagery could also be both involuntary and unconscious \citep{nanay_unconscious_2020}.
-
-Mine: *Some doubt that mental images could be utterly absent and have suggested that aphantasics might still have unconscious mental images. A very recent study (Liu & Barto 2023) used a behavioural task to assess visual imagery in various domains using imageable words (the French Perception-Imagination Battery) in aphantasics and controls. They found no difference in accuracy, but slower RTs and confidence in the responses, and argued that this result was coherent with the fact that aphantasics had the visual images required to complete the task yet without being conscious of them. Likewise, in a task supposed to use visual imagery to compare the location of a point with an imagined shape, Jacobs 2018 found no difference in accuracy between an aphantasic and control participant, a result that could be interpreted as accrediting the presence of unconscious visual imagery. However, like many studies on aphantasia, due to the conscious nature of the processes at play in these behavioural tasks (with or without sensory imagery), neither study could completely rule out the possibility of alternative strategies (propositional, spatial, etc.) used by aphantasics to solve the tasks.*
-
-\cite{jacobsVisualWorkingMemory2018} did a case study of an aphantasic named AI where they supplemented questionnaires with more objective measures of mental imagery. In this study, participants were presented with the name of a geometric shape (e.g., triangle), and were required to form a mental image of the shape and project it within a space delimited by a square frame. Immediately afterward, a visual mask was briefly presented, followed by a point drawn somewhere within the space delimited by a square frame. Participants then had to determine whether the point would be inside the previously imagined shape. Surprisingly, AI exhibited the same performance as control participants. An interpretation of this result could be that AI's response was based on an involuntary and unconscious mental image triggered by the presented shape name as a cue, whereas this mental image could potentially reach consciousness or even be voluntarily generated for control participants.
+Some doubt that mental imagery could be utterly absent, and have hypothesized that aphantasics who report having no conscious imagery at all might still have unconscious mental imagery \citep{nanay_unconscious_2020}. As this phenomenon is difficult to identify, very little is known about unconscious, involuntary mental imagery in aphantasia. A recent study (Liu & Barto 2023) used a behavioural task to assess visual imagery in various domains using imageable words (the French Perception-Imagination Battery) in aphantasics and controls. They found no differences in accuracy, but slower RTs and lower confidence in the aphantasics' answers, and argued that this result was consistent with aphantasics having the visual images required to complete the task, albeit without conscious access to them. Similarly, in a task that supposedly required visual imagery to compare the location of a point with an imagined shape, \cite{jacobsVisualWorkingMemory2018} found no difference in accuracy between an aphantasic participant and controls, a result that could be interpreted as accrediting the use of unconscious visual imagery in aphantasia. However, due to the potential conscious processes at play in these behavioural tasks (with or without sensory imagery), neither study could completely rule out the possibility of aphantasics using strategies other than visual imagery (e.g. semantic processing or spatial imagery) to solve the tasks, which prevents from firmly concluding that unconscious mental images exist.
  
     4. In contrast, several studies have demonstrated objective behavioural correlates with the condition: Keogh, Wicken, Kay. Keogh in particular devised a very interesting paradigm to try and answer this question. Let's describe this study's paradigm. In the end, they found no priming in aphantasics, and concluded that they had a real inability to generate mental images, not only lacking metacognition skills.
 
-Another study by \cite{keoghBlindMindNo2018} using an objective measure for mental imagery can be taken as an example to support the claim that at least some aphantasics have unconscious mental images. In this study, 15 participants with aphantasia and 209 control participants were cued either with the letter “R” (for red) or the letter “G” (for green), to imagine for 6 sec one of two images (a red-horizontal Gabor or a green-vertical Gabor). After that, they were required to rate the vividness of their mental image on a Likert-type scale from 1 to 4, then performed a binocular rivalry task immediately afterwards. They were presented  simultaneously with both Gabors for 750 ms, one in the left visual hemifield, the other in the right, and had to report which color they saw first. Their results showed that while the prior mental imagery of Gabor primed the color seen in the binocular rivalry task for control participants, participants with aphantasia showed no priming. The authors interpreted the absence of priming as a lack of sensory and phenomenal imagery in aphantasia rather than a lack of metacognition. In this regard, the findings suggest that individuals with aphantasia lack both conscious and unconscious imagery.
-
-*Alt*
-In this study (Keogh & Pearson, 2018), 15 participants with aphantasia and 209 control participants were cued either with the letter “R” (for red) or the letter “G” (for green), to imagine for 6 sec one of two images (a red-horizontal Gabor or a green-vertical Gabor). After that, they were required to rate the vividness of their mental image on a Likert-type scale from 1 to 4. Immediately after they performed a binocular rivalry task. They were presented with simultaneously each of the two Gabor for 750 ms, one in the left visual hemifield, the other in the right, and participants had to report which color they saw first. Their results showed that while the prior mental imagery of gabor primed the color seen in the binocular rivalry task for control participants, participants with aphantasia showed no priming. The authors interpreted the absence of priming as a genuine inability to generate mental images in aphantasia rather than a poor metacognition.
+On the other hand, several studies that sought to develop objective measures assessing visual imagery found differences between aphantasics and controls, such as aphantasics having no skin conductance response to frightening scenarios (Wicken), no automatic pupil dilatation in reaction to imagined brigth stimuli (Kay), or no priming by visual imagery \citep{keoghBlindMindNo2018}, suggesting that aphantasics are truly unable to produce mental images. The latter priming paradigm developed by \cite{keoghBlindMindNo2018} is particularly often cited as a promising and relatively undemanding task for objectively identifying aphantasia, and has already been used for this purpose in several subsequent studies (Keogh, Chang). In their initial study, they investigated visual imagery in aphantasics and controls using a binocular rivalry paradigm: in this task participants were cued either with the letter “R” (for red) or the letter “G” (for green), and had to imagine one of two images, respectively a red-horizontal Gabor or a green-vertical Gabor. After rating the vividness of their mental image, they were presented with both Gabors simultaneously, one in the left eye, the other in the right, and asked to say which color they had seen first. Their results showed that the mental visualization of the Gabors influenced the color seen in the binocular rivalry task for control participants, but not for aphantasics. The authors interpreted this absence of priming in aphantasia as a real inability to generate mental images, and not just a lack of metacognition skills.
 
     5. Yet, limits of the study (that are also shared by the aforementioned "objective" studies): Participants were explicitly asked to form mental images. As such, they asked people to do things that they probably thought they couldn't do to begin with.
 
-Yet this interpretation might be rediscussed. First caveat in this study aphantasics were self-diagnosed and were explicitly asked to voluntarily form mental images and rate their vividness during the task. This may seem counter-intuitive, given that they are being asked to do something they know they cannot do (or do not believe they are able to). It is then possible that aphantasics were not completely engaged in the task because they had a strong belief that they would fail to comply with the instructions, especially since they are self-diagnosed aphantasics and are aware of their condition \citep[see][for evidence for demand biases in aphantasia]{cabbaiInvestigatingRelationshipsTrait2023}.  Second, the study did not involve a task requiring unconscious mental imagery, it thus difficult to conclude if aphantasics have a selective deficit for conscious mental imagery, but intact unconscious mental imagery, or whether both forms of imagery are deficient. By using explicit priming, their paradigm did not involve unconscious mental imagery, which is theoretically triggered by implicit priming tasks. As such, we believe that comparing the results of an explicit priming task those of an implicit priming task would be an interesting approach to test if aphantasics have a complete deficit in mental imagery, including unconscious mental imagery, or if the deficit is restricted to conscious mental imagery.
-
-*Alt*
-However, in the study of Keogh and Pearson (2018) participants with aphantasia were explicitly asked to voluntarily form mental images and rate their vividness. This may seem counterintuitive, given that they are being asked to do something they know they cannot do. It is possible that aphantasics can have non-conscious mental images but cannot voluntarily create them. In other words, they can maybe form mental images automatically but not explicitly. Keogh and Pearson (2018) may have failed to observe a priming effect because they asked explicitly aphantasics to generate mental images. We think that an implicit priming would be an interesting way to test the genuine inability to generate mental images.
-
     6. Consequently, these studies cannot rule out the possibility of unconscious mental images in aphantasia. We aim to bridge this gap by designing a paradigm that would allow us to study these unconscious mental images. The objective of this study was to develop a new task inspired by the binocular rivalry used by \cite{keoghBlindMindNo2018}, including a priming task explicitly asking to use mental imagery, and an implicit priming task targeting unconscious mental imagery. Such a task would provide a novel and unprecedented behavioural method to characterize the presence or absence of visual imagery and, by extension, to objectively characterize aphantasia.
 
- Using a priming paradigm, the aim of the present study was to objectively assess the conscious and unconscious mental imagery in aphantasia.
+While these conclusions are convincing with regard to voluntary imagery (whether in conscious processes or not), they might be inadequate when it comes to involuntary and unconscious mental imagery. A first caveat in this study is that self-diagnosed aphantasics were explicitly asked to voluntarily form mental images and rate their vividness during the task. This may be counter-intuitive, as they were therefore being asked to do something they knew (or believed) they could not do in the first place. It is possible, then, that aphantasics did not fully engage with the task - or did not perform it correctly - because they firmly believed that they would fail to comply with the instructions, due to their awareness of their condition \citep[see][for evidence for demand biases in aphantasia]{cabbaiInvestigatingRelationshipsTrait2023}. Secondly, by using explicit priming, their study did not directly tap unconscious mental imagery, which is typically investigated with implicit priming tasks. Consequently, the binocular rivalry paradigm developed by \cite{keoghBlindMindNo2018} (like other objective measures based on explicit instructions, e.g. Kay, Wicken) cannot exclude the possibility of unconscious mental images in aphantasia.
+
+We aim to fill this gap by designing an implicit priming task that would allow us to study these unconscious mental images. The objective of the present study was to develop a new task inspired by the binocular rivalry used by \cite{keoghBlindMindNo2018}, including a priming task explicitly asking to use mental imagery, along with an implicit priming task targeting unconscious mental imagery. Such a task would provide a novel and unprecedented behavioural method to identify the presence or absence of visual imagery and, by extension, to objectively characterize aphantasia.
+
+In order to create an implicit task, the paradigm was divided into two parts: a prior association phase, and the implicit task itself. The association phase asked the participants to indicate the color of a red horizontal Gabor or a blue vertical Gabor in order to implicitly memorize the color-orientation association. In the subsequent implicit task, a red or blue colored circle was presented as a prime before a target, which was a Gabor either congruent or incongruent with the color seen (see Figures \ref{fig:protocol_asso} and \ref{fig:protocol_implicit} in Section \ref{sec:procedure}). As previous works of our team have shown \citep[e.g.][]{brunelWhenSeeingDog2013, reyMaskWhoWasn2015, reyWhenReactivatedVisual2018}, the prime is assumed to automatically reactivate an unconscious mental image of the associated Gabor. Participants were then asked to indicate the orientation of the target. An explicit task was added for control and comparison where participants were overtly asked to produce a mental image of the Gabors before the targets. In the explicit task, like in Keogh and Pearson’s study, participants were asked to imagine one of the previous Gabors by presenting a letter (R or B) as a cue. A Gabor congruent or incongruent with the color was then presented as a target, and participants were asked to indicate the orientation of the lines of the target.
+
+We expected to show an effect of congruence (i.e.\ a priming effect) in the implicit task by measuring a smaller difference in reaction times of aphantasics between the congruent and the incongruent condition, as opposed to controls who would be faster in the congruent setting (helped by the unconscious mental images of the Gabors). Moreover, to ensure that any priming observed would be the consequence of mental imagery (as opposed to semantic priming, for example), on half of the trials the targets were presented in black and white rather than color. If aphantasia relies only on a difficulty to access mental images, a priming effect should be observed for both groups in the implicit task, but not in the explicit one. If aphantasia relies on a genuine difficulty in creating mental images, no priming effect should be observed for the aphantasia group neither in the implicit nor in the explicit task.
+
+In addition, we carried out a second analysis with a subset of our sample composed solely of aphantasics with a minimal VVIQ score of 16, matched with controls with the highest VVIQ scores. This analysis aimed at answering a frequent interrogation in aphantasia literature about subgroups in aphantasia with differing characteristics: several authors pointed out that the fact of reporting \textit{completely absent} imagery could be qualitatively very distinct from having only \textit{vague} images \citep[e.g.,][]{blomkvistDefiningDiagnosingAphantasia2023, dancePrevalenceAphantasiaImagery2022, murakiInsightsEmbodiedCognition2023} Liu à ajouter. Although based on subjective reports, this difference could be crucial for our paradigm and, as such, called for this additional analysis, as we targeted potentially sensitive unconscious mental images.
 
 # ---
 
